--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Xcode
 build/
+.build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -30,4 +31,4 @@ Carthage
 # Note: if you ignore the Pods directory, make sure to uncomment
 # `pod install` in .travis.yml
 #
-# Pods/
+Pods/
